=== anjuta 2.3.5 ===

2008-02-25  Naba Kumar  <naba@gnome.org>

	* NEWS: Updated for release 2.3.5
	* configure.in: Bumped version to 2.3.5

	* plugins/build-basic-autotools/build-basic-autotools.c:
	(on_editor_changed): Avoid accessing text which is greater than
	valid range.

	* plugins/editor/text_editor_cbs.[c,h]: Removed dead code.

2008-02-25  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/breakpoints.c:
	Fix #518329: Crash when adding breakpoint and other similar bugs

2008-02-25  Johannes Schmid <jhs@gnome.org>

	* tagmanager/entry.c: (updateSortedFlag), (isCtagsLine),
	(copyBytes), (copyFile), (openTagFile), (makeTagEntry):
	Never call error() which calls exit()
	#517646 – Anjuta exists with code 2 when i try to import gedit

2008-02-23  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/sourceview.c: (ieditor_insert):
	Block insert_text signal when inserting manually.

2008-02-23  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/sourceview.c: (on_insert_text):
	Fixed a problem with the "insert-text" signal that broke
	copy&paste sometimes

2008-02-22  Johannes Schmid <jhs@gnome.org>

	* plugins/language-support-cpp-java/plugin.c:
	(get_line_indentation_base):
	More fixes for comment handling and made the code
	a lot simpler

2008-02-22  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/sourceview.c: (on_insert_text):
	Fixed #517919 – Crash on pasting docblock

2008-02-20  Johannes Schmid <jhs@gnome.org>

  Patch from James Liggett:
	* plugins/profiler/profiler.glade:
	Fix width options dialog. Translations are not longer cut off. (#516630)

2008-02-18  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/sourceview.c: (on_insert_text):
	Do not change the iterator in the "insert-text" handler because
	it has some strange side-effects when copying text
	Fix useless free'ing in hover-leave that might have led to random
	crashes

2008-02-18  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/start.c: